package edu.hitsz.prop;

public interface BombObserver {
    int update();
}
